# wsdclient

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: simple.rs
sample_diagrams/: 01_simple_diag.wsd  02_errors_in_diag.wsd  03_premium_features.wsd
src/: client.rs  config.rs  lib.rs  main.rs  options.rs  types.rs
